# Spoke

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
cmake/: SpokeConfig.cmake.in
csrc/sdk/: CMakeLists.txt  daemon.cpp  daemon_main.cpp  hub.h  hub_main.cpp
csrc/spoke/: CMakeLists.txt  actor.h  agent.h  client.h  hub.h  registry.h  types.h
docs/: spoke_rdma_design.md  spoke_v2_upgrade_plan.md  spoke_v2_user_guide.md
examples/: CMakeLists.txt  smoke_v1.cpp  smoke_v2.cpp  smoke_v2_agent.cpp  smoke_v3.cpp  smoke_v4.cpp  smoke_v4_agent.cpp  smoke_v5.cpp  smoke_v5_agent.cpp  smoke_v6.cpp  smoke_v6_agent.cpp  smoke_v7.cpp  smoke_v7_agent.cpp  smoke_v8.cpp  smoke_v8_agent.cpp
spoke/csrc/: CMakeLists.txt  actor.h  agent.h  client.h  serializer.h  types.h
spoke/sdk/: CMakeLists.txt  daemon.cpp  daemon.h  daemon_main.cpp
spoke/tools/: CMakeLists.txt  hub.h  hub_main.cpp
tests/: CMakeLists.txt  smoke_v1.cpp  smoke_v2.cpp  smoke_v2_agent.cpp  smoke_v3.cpp  smoke_v4.cpp  smoke_v4_agent.cpp  smoke_v5.cpp  smoke_v5_agent.cpp
